# pyagnostics

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
src/pyagnostics/: _test.py  exceptions.py  protocols.py  report.py  source.py  spans.py
tests/: test_report.py  test_source.py  test_spans.py
