[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "pyagnostics", from = "src" }]
classifiers = []
requires-poetry = '>=2.0,<3.0'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/risqcapital/pyagnostics/issues"
Repository = "https://github.com/risqcapital/pyagnostics"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "W",  # pyflakes warnings
    "I", # isort
    "N", # pep8 naming
    "UP", # pyupgrade
    "ANN", # flake8 annotations
    "ERA", # eradicate
    "PL", # pylint
    "TRY", # tryceratops
    "RUF", # ruf,
    "FA102" # future-required-type-annotation
]

extend-ignore = [
    "TRY003"
]
[project]
name = "pyagnostics"
description = ""
license = "MIT"
keywords = []
version = "3.0.0"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "RISQ Capital", email = "dev@risqcapital.com"}]
requires-python = '>=3.11,<4'
dependencies = ['rich (>=13,<15)']
